[gd_scene load_steps=3 format=3 uid="uid://bhuab7pveqav8"]

[ext_resource type="Script" uid="uid://cwdo4a6nxi3lg" path="res://Scripts/event_manager.gd" id="1_fjx5v"]
[ext_resource type="PackedScene" uid="uid://diqgwioilj5m8" path="res://Scenes/available_events.tscn" id="2_dpjx2"]

[node name="EventManager" type="Node2D"]
script = ExtResource("1_fjx5v")

[node name="MainContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MainContainer/HBoxContainer"]
layout_mode = 2

[node name="GenerateEventButton" type="Button" parent="MainContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
text = "Generate event"

[node name="HSeparator" type="HSeparator" parent="MainContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ChosenEventDetails" type="VBoxContainer" parent="MainContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="EventName" type="HBoxContainer" parent="MainContainer/HBoxContainer/VBoxContainer2/ChosenEventDetails"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/HBoxContainer/VBoxContainer2/ChosenEventDetails/EventName"]
layout_mode = 2
text = "Event name: "

[node name="Label2" type="Label" parent="MainContainer/HBoxContainer/VBoxContainer2/ChosenEventDetails/EventName"]
layout_mode = 2
text = "default"

[node name="EventType" type="HBoxContainer" parent="MainContainer/HBoxContainer/VBoxContainer2/ChosenEventDetails"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/HBoxContainer/VBoxContainer2/ChosenEventDetails/EventType"]
layout_mode = 2
text = "Event type:"

[node name="Label2" type="Label" parent="MainContainer/HBoxContainer/VBoxContainer2/ChosenEventDetails/EventType"]
layout_mode = 2
text = "default"

[node name="EventDescription" type="HBoxContainer" parent="MainContainer/HBoxContainer/VBoxContainer2/ChosenEventDetails"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/HBoxContainer/VBoxContainer2/ChosenEventDetails/EventDescription"]
layout_mode = 2
text = "Event description: "

[node name="Label2" type="Label" parent="MainContainer/HBoxContainer/VBoxContainer2/ChosenEventDetails/EventDescription"]
layout_mode = 2
text = "default"

[node name="Choice1" type="HBoxContainer" parent="MainContainer/HBoxContainer/VBoxContainer2/ChosenEventDetails"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/HBoxContainer/VBoxContainer2/ChosenEventDetails/Choice1"]
layout_mode = 2
text = "Choice 1: "

[node name="Label2" type="Label" parent="MainContainer/HBoxContainer/VBoxContainer2/ChosenEventDetails/Choice1"]
layout_mode = 2
text = "default"

[node name="Choice2" type="HBoxContainer" parent="MainContainer/HBoxContainer/VBoxContainer2/ChosenEventDetails"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/HBoxContainer/VBoxContainer2/ChosenEventDetails/Choice2"]
layout_mode = 2
text = "Choice 2: "

[node name="Label2" type="Label" parent="MainContainer/HBoxContainer/VBoxContainer2/ChosenEventDetails/Choice2"]
layout_mode = 2
text = "default"

[node name="VSeparator" type="VSeparator" parent="MainContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/HBoxContainer"]
layout_mode = 2

[node name="ResetEventsButton" type="Button" parent="MainContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
text = "Reset events"

[node name="HSeparator2" type="HSeparator" parent="MainContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayerChoice" type="HBoxContainer" parent="MainContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/HBoxContainer/VBoxContainer/PlayerChoice"]
layout_mode = 2
text = "Player chose: "

[node name="Label2" type="Label" parent="MainContainer/HBoxContainer/VBoxContainer/PlayerChoice"]
layout_mode = 2

[node name="RemainingEvents" type="HBoxContainer" parent="MainContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/HBoxContainer/VBoxContainer/RemainingEvents"]
layout_mode = 2
text = "Remaining events: "

[node name="Label2" type="Label" parent="MainContainer/HBoxContainer/VBoxContainer/RemainingEvents"]
layout_mode = 2

[node name="Events" type="Node2D" parent="."]

[node name="AvailableEvents" parent="." instance=ExtResource("2_dpjx2")]
position = Vector2(-150, 52.5)

[connection signal="pressed" from="MainContainer/HBoxContainer/VBoxContainer2/GenerateEventButton" to="." method="_on_generate_event_button_pressed"]
[connection signal="pressed" from="MainContainer/HBoxContainer/VBoxContainer/ResetEventsButton" to="." method="_on_reset_events_button_pressed"]
